# invenio-cold-storage

./: .gitignore  INSTALL.rst  MANIFEST.in  README.rst  run-tests.sh  setup.cfg
.github/workflows/: tests.yml
invenio_cold_storage/: api.py  catalog.py  cli.py  manager.py  models.py  persistency.py  storage.py  tasks.py
invenio_cold_storage/search/component_templates/os-v2/: cold-file-indexes.json  cold-persistency.json  cold-storage-record.json
invenio_cold_storage/search/index_templates/os-v2/: cold-persistency.json
invenio_cold_storage/transfer/: cp.py  fts.py
invenio_cold_storage/transter/: cp.py  fts.py
tests/: cold_storage_test.py  conftest.py
tests/mock_module/: api.py  config.py  models.py  permissions.py  schemas.py
tests/mock_module/index_templates/os-v2/records/: record-v1.0.0.json
tests/mock_module/jsonschemas/records/: cold_storage-v1.0.0.json
