# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2023 CERN.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-cold-storage
version = attr: invenio_cold_storage.__version__
description = Cold Storage support for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio cold storage
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-cold-storage
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    #invenio-fts
    invenio-app
    invenio-indexer
    invenio-search[opensearch2]
    invenio-records-files
    invenio_records_resources==4.9.0
    invenio_records_permissions
    invenio-files-rest
    Flask-Breadcrumbs
    invenio-db[postgresql]
    #I'm a bit confused about this one. It is the version required by opendata
    invenio-accounts==3.1.0
    fts3

[options.extras_require]
tests =
    mock>=4.0.0
    pytest-black>=0.3.0
    pytest-invenio>=1.4.5
    Sphinx>=4.2.0,<6
    marshmallow
    marshmallow_utils

fts =
    fts3


[options.entry_points]
flask.commands =
    cold = invenio_cold_storage.cli:cold
invenio_search.component_templates =
     invenio_cold_storage = invenio_cold_storage.search.component_templates
invenio_search.index_templates =
     invenio_cold_storage = invenio_cold_storage.search.index_templates
invenio_cold_storage.storage =
    #qos = invenio_cold_storage.cold
    transfer = invenio_cold_storage.storage:default_transfer
    hot_path = invenio_cold_storage.storage:default_hot_path
    cold_path = invenio_cold_storage.storage:default_cold_path
[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
; pydocstyle requires python > 3.6
; addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_xrootd --cov-report=term-missing
addopts = --black --isort --doctest-glob="*.rst" --doctest-modules --cov=invenio_cold_storage --cov-report=term-missing
testpaths = tests invenio_cold_storage

